<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Modul" >

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4" >

        <Button
            android:id="@+id/btnModul1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/modul1" />

        <Button
            android:id="@+id/btnModul2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/modul2" />

        <Button
            android:id="@+id/btnModul3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/modul3" />

        <Button
            android:id="@+id/btnModul4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/modul4" />
        
    </LinearLayout>
</LinearLayout>