<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/region" />

            <Spinner
                android:id="@+id/spRegion"
                android:layout_width="match_parent"
                android:layout_height="65dp" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/PT" />

            <Spinner
                android:id="@+id/spPT"
                android:layout_width="match_parent"
                android:layout_height="65dp" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/estate" />

            <Spinner
                android:id="@+id/spEstate"
                android:layout_width="match_parent"
                android:layout_height="65dp" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/division" />

            <Spinner
                android:id="@+id/spDivision"
                android:layout_width="match_parent"
                android:layout_height="65dp" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/blockid" />

            <EditText
                android:id="@+id/etBlockid"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next" />
    </LinearLayout>

</ScrollView>